# dashboard_fi

./: DATA_SCHEMA.md  build_nss_panel.py  dashboard.py  portfolio_examples.ipynb  refresh_data.py  requirements.txt  update_all.py
br_bonds/: __init__.py  _interpolation.py  _schedules.py  analytics.py  nss.py  portfolio.py  secondary.py  vna.py
br_bonds/br_bonds_pkg/: _interpolation.py  _schedules.py  lft.py  ntnb.py  prefixado.py  vna.py
br_bonds/br_bonds_pkg/derivatives/: __init__.py  copom.py  dap.py  di1.py
br_bonds/derivatives/: _common.py  copom.py  dap.py  ddi.py  di1.py
br_bonds_pkg/: README.md  analytics.py  pyproject.toml
dados_bcb_secundario/: bcb_curve_panel.parquet  bcb_mercado_secundario_titulos_publicos.parquet  bcb_mercado_secundario_titulos_publicos_filtrado.parquet  breakeven_panel.parquet  breakeven_panel_bfuts.parquet  breakeven_panel_ff.parquet  breakeven_panel_futures.parquet  breakeven_panel_nss.parquet  cdi_series.parquet  di1_futs.parquet  nss_params.parquet  vna_ntnb.parquet
