[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "br-bonds"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.0",
    "scipy>=1.11",
    "bizdays>=1.0",
    "python-dateutil>=2.9",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["br_bonds*"]
